# python_celery

./: README.md  docker-compose.yaml  pyproject.toml  tasks.py
.db_data/: dump.rdb
